static/css/global.css
body {
    font-family: 'Inter', sans-serif;
}

.navbarContainer {
    border-radius: 15px;
    background-color: rgba(221, 67, 43, 0.80);
    padding: 25px;
    display: inline-grid;
    justify-content: center;
}

.navbarContainer > .userDetails {
    font-size: 12px;
    font-weight: 400;
    color: white;
    width: 180px;
    padding-bottom: 10px;
}

.userDetails > .title {
    font-size: 17px;
    font-weight: 700;
}

.userDetails > p {
    margin: 0.5em;
}

/* default button beahviour*/
button {
    /* no ugly borders */
    /* flat buttons */
    border: transparent;
    /* rounded borders by default; TODO change to more relative value */
    border-radius: 5px;
}

.navbarButtons > .button {
    display: block;
    font-size: 17px;
    color: white;
    font-weight: 600;
    background-color: inherit;
    padding: 10px;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    min-width: 210px;
}

.navbarButtons > button:not(:active):hover {
    background-image: linear-gradient(rgb(0 0 0/40%) 0 0);
}

.navbarButtons > button:active {
    /* box-shadow:0 0 10px #ff9d72; */
    /* background-color: rgba(256, 256, 256, 30); */
    background-color: black;

    transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
    /* background-image: linear-gradient(rgb(0 0 0 * 40%) 0 0); */
    /* transition: ease-in; */
    /* transition-duration: 0.3s; */
}

hr.solid {
    border-top: 1px solid white;
    width: 210px;
    margin-top: 1em;
    margin-bottom: 1em;
}

